Fix Vale issues

--- a/src/content/basics/devtools/apollo-config.mdx
+++ b/src/content/basics/devtools/apollo-config.mdx
@@ -77,7 +77,7 @@ module.exports = {
       headers: {
         authorization: 'Bearer lkjfalkfjadkfjeopknavadf'
       },
-      // optional disable SSL validation check
+      // optionally turn off SSL validation check
       skipSSLValidation: true
     }
   }
