--- a/src/content/basics/devtools/cli.mdx
+++ b/src/content/basics/devtools/cli.mdx
@@ -22,11 +22,11 @@ If your project uses `npm`, we recommend installing the Apollo CLI locally by ad
 npm install -D apollo
 ```
 
-This helps make sure that all of your project's collaborators have the same version of the CLI installed.
+This helps make sure that all your project's collaborators have the same version of the Apollo CLI installed.
 
 ### Global installation
 
-You can install the CLI globally in your development environment with the following command:
+You can install the Apollo CLI globally in your development environment with the following command:
 
 ```bash showLineNumbers=false
 npm install -g apollo
