--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -91,7 +91,7 @@ Apollo provides tools for every developer that interacts with GraphQL—whether 
 
 ## For client developers
 
-**Apollo Client** is the industry-standard GraphQL client library. Execute GraphQL operations, cache their results, and manage all of your application's state in one place.
+**Apollo Client** is the industry-standard GraphQL client library. Execute GraphQL operations, cache their results, and manage all your application's state in one place.
 
 <DocsetGrid>
   <Docset
