--- a/src/content/basics/resources/faq.mdx
+++ b/src/content/basics/resources/faq.mdx
@@ -151,11 +151,11 @@ As with any large change, the adoption of GraphQL should be incremental. GraphQL
 
 ### Who owns the schema design?
 
-GraphQL schemas work best when their design is collaborated on by combination of back-end implementers and front-end consumers. It's tempting to design a schema to mirror underlying API structures or database tables, but this can reduce the usefulness of GraphQL.
+GraphQL schemas work best when their design is collaborated on by combination of backend implementers and frontend consumers. It's tempting to design a schema to mirror underlying API structures or database tables, but this can reduce the usefulness of GraphQL.
 
 ### How do I set up authentication/authorization for my GraphQL schema?
 
-Authentication and authorization are important topics to discuss with any API. GraphQL provides a very granular approach to handling these topics. But don't worry, if an API being consumed by GraphQL already has authorization built-in, it may be possible to ignore it completely.
+Authentication and authorization are important topics to discuss with any API. GraphQL provides a granular approach to handling these topics. But don't worry, if an API being consumed by GraphQL already has authorization built-in, it may be possible to ignore it completely.
 
 ### How can I secure my schema from malicious or expensive queries?
 
