--- a/src/content/basics/resources/glossary.mdx
+++ b/src/content/basics/resources/glossary.mdx
@@ -6,7 +6,7 @@ description: Glossary of Apollo and GraphQL terminology
 
 import GlossaryPage from '../../../components/GlossaryPage';
 
-As you familarize yourself with GraphQL and explore what Apollo has to offer, you might encounter some unfamiliar terms along the way. To help you on your journey, we've defined some of the most common Apollo and GraphQL vocabulary in this glossary.
+As you familiarize yourself with GraphQL and explore what Apollo has to offer, you might encounter some unfamiliar terms along the way. To help you on your journey, we've defined some of the most common Apollo and GraphQL vocabulary in this glossary.
 
 If you want to request a new term or a change to an existing term, please use the [glossary request form](https://forms.gle/qoTHxX9ut9bTYdQD6).
 
