--- a/src/content/graphos/basics/data-privacy.mdx
+++ b/src/content/graphos/basics/data-privacy.mdx
@@ -15,9 +15,9 @@ This article describes which data is and is _not_ sent to Apollo GraphOS by othe
 
 The [Apollo Router](/router/), [Apollo Server](/apollo-server/), the [Rover CLI](/rover/), and the legacy [Apollo CLI](/devtools/cli/) have **opt-in features** that send data to GraphOS.
 
-The Rover CLI also collects anonymous usage data by default. [You can disable this.](/rover/privacy/)
+The Rover CLI also collects anonymous usage data by default. [You can turn this off.](/rover/privacy/)
 
-The [Apollo Kotlin IDE plugin](/kotlin/v4/testing/android-studio-plugin/) also collects anonymous usage data by default. [You can disable this.](/kotlin/v4/testing/android-studio-plugin/#privacy-and-data-collection)
+The [Apollo Kotlin IDE plugin](/kotlin/v4/testing/android-studio-plugin/) also collects anonymous usage data by default. [You can turn this off.](/kotlin/v4/testing/android-studio-plugin/#privacy-and-data-collection)
 
 If you have a [cloud supergraph](./graphs/#cloud-supergraphs), its router is hosted and managed _by_ GraphOS, and it automatically enables metrics reporting. [Learn about data collection for cloud supergraphs.](#which-types-of-data-are-collected-by-a-cloud-supergraph)
 
@@ -71,7 +71,7 @@ In addition, you can configure a standalone instance of Apollo Server to [report
 
 <Note>
 
-_All_ data sent to GraphOS from both the Apollo Router and Apollo Server is transmitted using HTTPS on port 443, and HTTP traffic on port 80 is disabled.
+_All_ data sent to GraphOS from both the Apollo Router and Apollo Server is transmitted using HTTPS on port 443, and HTTP traffic on port 80 is turned off.
 
 </Note>
 
@@ -177,7 +177,7 @@ If you perform authorization in a header other than those listed above (such as 
 
 In Apollo Server 2.7.0 and later, **none** of an operation's HTTP headers is sent to GraphOS by default.
 
-You can set a value for the [usage reporting plugin's `sendHeaders` option](/apollo-server/api/plugin/usage-reporting/#sendheaders) to specify a different strategy for reporting some or all of your HTTP headers.
+You can set a value for the [usage reporting plugin's `sendHeaders` option](/apollo-server/api/plugin/usage-reporting/#sendheaders) to specify a different strategy for reporting some or all your HTTP headers.
 
 #### Apollo Server prior to 2.7.0
 
@@ -218,7 +218,7 @@ Each GraphOS-managed router is an instance of the [Apollo Router](/router/) runn
 
 ## What data does GraphOS log about operations executed in the Explorer?
 
-**Only front-end usage metrics for improving the product.** The [GraphOS Studio Explorer](./explorer/) enables you to build and execute operations against your graph. These operations are sent directly from your browser and **do not** pass through Apollo systems.
+**Only frontend usage metrics for improving the product.** The [GraphOS Studio Explorer](./explorer/) enables you to build and execute operations against your graph. These operations are sent directly from your browser and **do not** pass through Apollo systems.
 
 ## GDPR
 
