--- a/src/content/graphos/basics/graphs/local-development.mdx
+++ b/src/content/graphos/basics/graphs/local-development.mdx
@@ -60,11 +60,11 @@ Now if you run test queries in the Explorer, you'll see that they can include fi
 
 ## Ending a `rover dev` session
 
-To shut down your local supergraph, use `CTRL+C` to terminate the _first_ `rover dev` process you started. This automatically terminates all _secondary_ `rover dev` processes that are part of the same session.
+To shut down your local supergraph, use `CTRL+C` to stop the _first_ `rover dev` process you started. This automatically terminates all _secondary_ `rover dev` processes that are part of the same session.
 
 <Note>
 
-If you terminate a _secondary_ `rover dev` process, your session remains active, and the router's schema is automatically updated to reflect the removed subgraph.
+If you stop a _secondary_ `rover dev` process, your session remains active, and the router's schema is automatically updated to reflect the removed subgraph.
 
 </Note>
 
