--- a/src/content/graphos/basics/operations/subscriptions.mdx
+++ b/src/content/graphos/basics/operations/subscriptions.mdx
@@ -55,7 +55,7 @@ sequenceDiagram
     Router->>Client: Sends new data
 ```
 
-Subscriptions are best suited to apps that rely on frequently-changing, time-sensitive data (such as stock prices, IoT sensor readings, live chat, or sports scores).
+Subscriptions are best suited to apps that rely on frequently changing, time-sensitive data (such as stock prices, IoT sensor readings, live chat, or sports scores).
 
 ## How it works
 
@@ -105,7 +105,7 @@ flowchart LR;
 
 ## Prerequisites
 
-⚠️ **Before you add `Subscription` fields to your subgraphs,** do _all_ of the following _in the order shown_ to prevent errors:
+⚠️ **Before you add `Subscription` fields to your subgraphs,** do _all_ the following _in the order shown_ to prevent errors:
 
 1. Make sure you've [created a cloud supergraph](../quickstart/cloud) and connected your GraphQL API to it!
 
