--- a/src/content/graphos/basics/sub-processors.mdx
+++ b/src/content/graphos/basics/sub-processors.mdx
@@ -29,7 +29,7 @@ By subscribing to receive updates about this page, you will be notified by email
 
 <Note>
 
-**Subscribing to Sub-processor updates is temporarily disabled as we migrate our communication list.** This article remains the canonical location for Apollo Sub-processor details.
+**Subscribing to Sub-processor updates is temporarily turned off as we migrate our communication list.** This article remains the canonical location for Apollo Sub-processor details.
 
 [View this article's edit history.](https://github.com/apollographql/docs/commits/main/src/content/graphos/sub-processors.mdx)
 
