--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -132,7 +132,7 @@ If a Federation 1 source variant already has one or more associated contracts, i
 
 1. Identify the source variant you want to move to Federation 2.
 2. Save the details for each of that source variant's existing contract variants, most importantly each variant's associated filters.
-3. Delete all of the source variant's existing contract variants.
+3. Delete all the source variant's existing contract variants.
 4. Now that the source variant has no associated contracts, you can configure it to use Federation 2 composition. [Learn how](/federation/federation-2/moving-to-federation-2#step-2-configure-your-composition-method).
 5. Recreate your deleted contract variants, which will now use Federation 2 composition like the modified source variant.
 
