--- a/src/content/graphos/delivery/github-integration.mdx
+++ b/src/content/graphos/delivery/github-integration.mdx
@@ -1,7 +1,7 @@
 ---
 title: Connecting Apollo to GitHub
-subtitle: Enhance schema checks with the Apollo Studio app for Github
-description: Enhance graphQL schema checks with the Apollo Studio Github app to link results to pull requests and run checks on each commit.
+subtitle: Enhance schema checks with the Apollo Studio app for GitHub
+description: Enhance graphQL schema checks with the Apollo Studio GitHub app to link results to pull requests and run checks on each commit.
 ---
 
 To enhance the convenience and helpfulness of [schema checks](./schema-checks/), the [Apollo Studio app for GitHub](https://github.com/marketplace/apollo-studio) adds links to schema check results on the pull requests that initiate them:
