--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -714,7 +714,7 @@ type Product {
 
 <RuleExpansionPanel
   title="TAG_DIRECTIVE_USES_UNKNOWN_NAME"
-  whatItDoes="Checks that the [`@tag`](/federation/federated-types/federated-directives/#tag) directive uses an approved value for its `name` argument. You specify approved values in [GraphOS Studio](./schema-linter/#configuring-the-linter)."
+  whatItDoes="Checks that the [`@tag`](/federation/federated-types/federated-directives/#tag) directive uses an approved value for its `name` argument. You specify approved values in [GraphOS Studio](./schema-linter/#linter-configuration)."
   rationale="This directive is used most commonly with [GraphOS contracts](./contracts). Validating `@tag` names ensures contracts work as intended."
 >
 
