--- a/src/content/graphos/delivery/publishing-schemas.mdx
+++ b/src/content/graphos/delivery/publishing-schemas.mdx
@@ -39,7 +39,7 @@ graph LR;
 
 1. Identify the name of the subgraph you're publishing to. You can view the names of your existing subgraphs from your variant's **Subgraphs** page in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
-2. **If you're publishing a subgraph for the first time,** _also_ obtain the **routing URL** for that subgraph. This is the URL that your router will use to communicate with the subgraph.
+2. **If you're publishing a subgraph for the first time,** _also_ obtain the **routing URL** of that subgraph. This is the URL that your router will use to communicate with the subgraph.
 
    - If GraphOS already knows your subgraph's routing URL, you don't need to provide this value unless you're changing it.
 
