--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -22,7 +22,7 @@ GraphOS schema linting only analyzes parts of your modified schema that differ f
 
 </Note>
 
-## Configuring the linter
+## Linter configuration
 
 The GraphOS schema linter uses a [predefined collection of rules](./linter-rules/) to identify issues with proposed schema changes.
 The predefined collection includes [schema composition](/federation/federated-types/composition) rules. The **graph-wide linter defaults** you define apply to all variants of a particular graph.
