--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -19,7 +19,7 @@ The results of the SAF assessment serve as a roadmap for architecture and platfo
   Go to the Supergraph Architecture Framework
 </TrackableButton>
 
-## SAF Pillars
+## SAF pillars
 
 SAF centers its principles and best practices around five pillars:
 
