--- a/src/content/graphos/explorer/embed-explorer.mdx
+++ b/src/content/graphos/explorer/embed-explorer.mdx
@@ -66,7 +66,7 @@ For descriptions of options shown in the dialog (along with advanced options tha
 
 ### Setting a default operation
 
-You can prepopulate your embedded Explorer with an operation from one of your existing Explorer tabs. If you do, the embedded Explorer includes all of the following automatically on load:
+You can prepopulate your embedded Explorer with an operation from one of your existing Explorer tabs. If you do, the embedded Explorer includes all the following automatically on load:
 
 - The operation you selected
 - Any variable names and values defined in the operation's associated tab that are _used_ by the operation
