--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -34,7 +34,7 @@ To create an operation collection in the Explorer:
      width="300"
    />
 
-2. In the top left, select the graph/variant combination you want to create a collection for (e.g., `docs-example-graph/current` in the screenshot above).
+2. In the top left, select the graph/variant combination you want to create a collection for (for example, `docs-example-graph/current` in the screenshot above).
 3. Click the "bookmark" tab in the Explorer's left panel to open your collection settings (shown in the screenshot above).
 4. Click **+ Create collection** at the top of either the Personal or the Shared section, depending on which type of collection you want to create.
 
@@ -68,7 +68,7 @@ To add operations to a collection:
 
    <Note>
 
-   If you define _multiple_ operations in a single editor, _all_ of those operations are saved together as a single entry in a collection.
+   If you define _multiple_ operations in a single editor, _all_ those operations are saved together as a single entry in a collection.
 
    </Note>
 
