--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -342,7 +342,7 @@ This exposes the `crypto-js` package for use within your script. For available f
 
 ## Examples
 
-### Get an enviroment variable
+### Get an environment variable
 
 Scripts can access an environment variable [set in the Explorer's settings](./connecting-authenticating#defining) like so:
 
