--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -49,4 +49,4 @@ interface ResponseShape {
 
 - **If the build fails**, `buildErrors` is an array of `BuildError` objects that describe the errors that occurred during the build. Otherwise, this field is not present.
 
-- The value of `variantID` is in the format `graphID@variantName` (e.g., `mygraph@staging`). This format is known as a [graph ref](/rover/conventions/#graph-refs).
+- The value of `variantID` is in the format `graphID@variantName` (for example, `mygraph@staging`). This format is known as a [graph ref](/rover/conventions/#graph-refs).
