--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -1,7 +1,7 @@
 ---
 title: Performance alerts from GraphOS
 subtitle: Receive notifications whenever metrics exceed defined thresholds
-description: Configure alerts to receive notifications in Slack or Pagerduty instance when specific operation metrics surpass defined thresholds.
+description: Configure alerts to receive notifications in Slack or PagerDuty instance when specific operation metrics surpass defined thresholds.
 ---
 
 <Note>
@@ -12,7 +12,7 @@ This feature is only available with a [paid plan](https://www.apollographql.com/
 
 <ExperimentalFeature />
 
-GraphOS can notify your team's Slack workspace or Pagerduty instance whenever a particular metric (such as error rate) for a particular GraphQL operation exceeds a defined threshold. This is useful for detecting anomalies, especially following a release.
+GraphOS can notify your team's Slack workspace or PagerDuty instance whenever a particular metric (such as error rate) for a particular GraphQL operation exceeds a defined threshold. This is useful for detecting anomalies, especially following a release.
 
 <img
   src="../../img/integrations/slack-notification.png"
@@ -31,7 +31,7 @@ You can configure performance alerts to trigger for any of the following metrics
 - **Error percentage:** the number of requests with errors, divided by total
   requests
 
-Each performance alert you define can apply to either **a specific operation** or **any operation**. If you define an alert that applies to a specific operation, the "any operation" alerts for the _same metric_ no longer apply to that operation (i.e., the more specific alert takes precedence).
+Each performance alert you define can apply to either **a specific operation** or **any operation**. If you define an alert that applies to a specific operation, the "any operation" alerts for the _same metric_ no longer apply to that operation (that is, the more specific alert takes precedence).
 
 ## Setup
 
@@ -47,7 +47,7 @@ Each performance alert you define can apply to either **a specific operation** o
 />
 
 4. Configure the alert's **Operation Name**, **Trigger**, and **Trigger Value** to suit your needs.
-5. Select a **Channel** to send alerts to. You can select **New Channel** from the dropdown if you haven't yet configured the Slack channel or Pagerduty instance you want to use.
+5. Select a **Channel** to send alerts to. You can select **New Channel** from the dropdown if you haven't yet configured the Slack channel or PagerDuty instance you want to use.
 6. Click **Create**.
 
 ## Threshold window
