--- a/src/content/graphos/org/account.mdx
+++ b/src/content/graphos/org/account.mdx
@@ -22,7 +22,7 @@ you will also be asked to [create an organization](./) as part of the signup pro
 
 ## Personal API keys
 
-You can create API keys for your user account on your [Personal Settings page](https://studio.apollographql.com/user-settings). A user API key can be useful when configuring the Rover CLI or the Apollo VS Code extension. The key has the same permissions as your user account, which means you can use it to interact with all of your organizations and graphs in Studio.
+You can create API keys for your user account on your [Personal Settings page](https://studio.apollographql.com/user-settings). A user API key can be useful when configuring the Rover CLI or the Apollo VS Code extension. The key has the same permissions as your user account, which means you can use it to interact with all your organizations and graphs in Studio.
 
 ## Deleting your account
 
