--- a/src/content/graphos/org/index.mdx
+++ b/src/content/graphos/org/index.mdx
@@ -16,7 +16,12 @@ You create your first organization as part of the [account creation process](../
 
 You can create additional organizations by clicking **Create a new organization** at the bottom of your organization dropdown in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content):
 
-<img src="../img/organization-list.jpg" class="screenshot" alt="Studio organization list" width="300" />
+<img
+  src="../img/organization-list.jpg"
+  className="screenshot"
+  alt="Studio organization list"
+  width="300"
+/>
 
 A single organization can include any number of [graphs](../graphs/), so a single company rarely needs more than one or two organizations.
 
@@ -24,7 +29,12 @@ A single organization can include any number of [graphs](../graphs/), so a singl
 
 Click the organization dropdown at the top of the page in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) to view the list of all organizations you belong to:
 
-<img src="../img/organization-list.jpg" class="screenshot" alt="Studio organization list" width="300" />
+<img
+  src="../img/organization-list.jpg"
+  className="screenshot"
+  alt="Studio organization list"
+  width="300"
+/>
 
 - Click on an organization to view its associated graphs and metrics.
 - Each organization has a **Graphs** list, a **Members** management page, and a **Settings** page.
@@ -39,7 +49,7 @@ Click the organization dropdown at the top of the page in [GraphOS Studio](https
 
 You can delete an organization at any time. Doing so removes all traces of the organization from GraphOS.
 
-Deleting your organization does all of the following:
+Deleting your organization does all the following:
 
 - Removes all user memberships from the organization
 - Permanently deletes all graphs from the organization, along with their associated data. These graph IDs cannot be reused later.
