--- a/src/content/shared/pq-security-levels.mdx
+++ b/src/content/shared/pq-security-levels.mdx
@@ -100,7 +100,7 @@ The router rejects unregistered operations, and if `log_unknown` is true, those 
 
 <Tip>
 
-So you can monitor the operations your router rejects, it's best to keep `log_unknown` as `true` while adopting safelisting. Once you're confident that all your clients are properly configured, you can turn it off to reduce noise in your logs.
+It's best to keep `log_unknown` as `true` while adopting safelisting so you can monitor the operations your router rejects. Once you're confident that all your clients are properly configured, you can turn it off to reduce noise in your logs.
 
 </Tip>
 
@@ -137,6 +137,6 @@ With `log_unknown` set to true, the router [logs](/router/logging) _all_ rejecte
 
 <Note>
 
-So you can monitor the operations your router rejects, it's best to keep `log_unknown` as `true` while adopting safelisting. Once you're confident that all your clients are properly configured, you can turn it off to reduce noise in your logs.
+It's best to keep `log_unknown` as `true` while adopting safelisting so you can monitor the operations your router rejects. Once you're confident that all your clients are properly configured, you can turn it off to reduce noise in your logs.
 
 </Note>
