--- a/src/content/technotes/TN0004-router-authentication.mdx
+++ b/src/content/technotes/TN0004-router-authentication.mdx
@@ -29,7 +29,7 @@ In fact, we recommend you [combine all three strategies](#combining-authenticati
 
 ## Use Authorization Directives
 
-In addition to the the approaches outlined below, you can use [authorization directives](/router/configuration/authorization/) to enforce authorization at the router layer.
+In addition to the approaches outlined below, you can use [authorization directives](/router/configuration/authorization/) to enforce authorization at the router layer.
 This allows you to authorize requests prior to them hitting your subgraphs saving on bandwidth and processing time.
 
 <EnterpriseFeature>
