--- a/src/content/technotes/TN0005-overload-protection.mdx
+++ b/src/content/technotes/TN0005-overload-protection.mdx
@@ -43,7 +43,7 @@ If you're currently using the `startStandaloneServer` function, you'll need to [
 
 </Note>
 
-If you're using `@apollo/server`'s Express integration (i.e.[`expressMiddleware`](/apollo-server/api/express-middleware)), you can add `overload-protection` via Express middleware by adding the highlighted lines to your server creation:
+If you're using `@apollo/server`'s Express integration (that is[`expressMiddleware`](/apollo-server/api/express-middleware)), you can add `overload-protection` via Express middleware by adding the highlighted lines to your server creation:
 
 ```js title="index.js"
 import { ApolloServer } from "@apollo/server";
