--- a/src/content/technotes/TN0017-interfaces.mdx
+++ b/src/content/technotes/TN0017-interfaces.mdx
@@ -25,7 +25,7 @@ type Book implements Media {
 }
 ```
 
-Because interfaces can enforce this requirement on implementing object types, it can be tempting to create interfaces _purely_ to enforce field definitions. The following schema requires a `name` field on all of its object types by declaring that those types implement the `Nameable` interface:
+Because interfaces can enforce this requirement on implementing object types, it can be tempting to create interfaces _purely_ to enforce field definitions. The following schema requires a `name` field on all its object types by declaring that those types implement the `Nameable` interface:
 
 <p style="margin-bottom: 0;">❌</p>
 
@@ -120,18 +120,19 @@ If your API adds additional possible types to the abstract type, clients must ch
 ```ts
 // Trigger a TypeScript error if a new type is introduced but
 // we haven't added a switch case for it.
-const assertUnknown = (x: never) => console.log(`Unknown Pet type: ${(x as any).__typename}`);
+const assertUnknown = (x: never) =>
+  console.log(`Unknown Pet type: ${(x as any).__typename}`);
 
 switch (pet.__typename) {
-  case "Cat":
+  case 'Cat':
     console.log(`Cat meows ${pet.meowVolume}`);
     break;
-  case "Dog":
+  case 'Dog':
     console.log(`Dog barks ${pet.barkVolume}`);
     break;
   default:
     assertUnknown(pet);
-    console.log("Fallback behavior");
+    console.log('Fallback behavior');
 }
 ```
 
