--- a/src/content/technotes/TN0028-change-management.mdx
+++ b/src/content/technotes/TN0028-change-management.mdx
@@ -75,7 +75,7 @@ During Step 4, our system will most likely end up in an inconsistent state, wher
 
 When the subgraphs update first, a client _could_ request the new schema elements, and the Router will raise an operation validation error because it is not yet aware of changes.
 
-In practice, however, this rarely matters. Due to the declarative nature of GraphQL, clients must update their operations to use the new schema elements. **Clients aren’t polling our schema's introspection response to discover new fields and immediately start requesting them.** (Also, Apollo recommends [disabling introspection in production](https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/). Only after the system reaches a consistent state will we announce the availability of these new schema elements to clients.
+In practice, however, this rarely matters. Due to the declarative nature of GraphQL, clients must update their operations to use the new schema elements. **Clients aren't polling our schema's introspection response to discover new fields and immediately start requesting them.** (Also, Apollo recommends [disabling introspection in production](https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/). Only after the system reaches a consistent state will we announce the availability of these new schema elements to clients.
 
 If we enable [Schema Change Notifications](/graphos/metrics/notifications/schema-change-integration/), Apollo GraphOS will automatically notify our colleagues that the new schema is available right after the Router receives the updated supergraph schema.
 
