--- a/src/content/technotes/TN0041-errors-as-data-explained.mdx
+++ b/src/content/technotes/TN0041-errors-as-data-explained.mdx
@@ -19,7 +19,7 @@ System errors can include situations like:
 
 - Server crashes
 - Unhandled exceptions
-- Exhausted resources (e.g., memory or CPU)
+- Exhausted resources (for example, memory or CPU)
 
 These errors are usually unexpected and can't be handled gracefully by the client. As a result, they should be logged and monitored on the server side, while the client should display a generic error message.
 
