--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -192,7 +192,7 @@ As a company grows, this could eliminate hundreds of updates, deployments, and d
 
 ## Conclusion
 
-GraphQL is a powerful tool for abstracting away the complexities of backend services from front-end consumers. It can shield consumers from major changes to those services while reducing the impact of those changes. Ultimately, it provides choice and control to consumers without negatively impacting backend services.
+GraphQL is a powerful tool for abstracting away the complexities of backend services from frontend consumers. It can shield consumers from major changes to those services while reducing the impact of those changes. Ultimately, it provides choice and control to consumers without negatively impacting backend services.
 
 ## Further reading
 
