--- a/src/content/basics/devtools/editor-plugins.mdx
+++ b/src/content/basics/devtools/editor-plugins.mdx
@@ -5,7 +5,12 @@ description: Connect your editor to the Apollo platform
 
 The Apollo [VS Code extension](https://marketplace.visualstudio.com/items?itemName=apollographql.vscode-apollo) provides an all-in-one tooling experience for developing apps with Apollo.
 
-<img src="../img/editors/jump-to-def.gif" width="80%" style="margin: 5%" alt="Using jump to definition on a fragment" />
+<img
+  src="../img/editors/jump-to-def.gif"
+  width="80%"
+  style="margin: 5%"
+  alt="Using jump to definition on a fragment"
+/>
 
 The extension enables you to:
 
@@ -20,7 +25,7 @@ The extension enables you to:
 
 ## Getting started
 
-To get all of the benefits of the VS Code experience, it's best to link the schema that is being developed against **before** installing the extension. The best way to do that is by [publishing a schema](/graphos/delivery/publishing-schemas/) to the Apollo schema registry. After that's done:
+To get all the benefits of the VS Code experience, it's best to link the schema that is being developed against **before** installing the extension. The best way to do that is by [publishing a schema](/graphos/delivery/publishing-schemas/) to the Apollo schema registry. After that's done:
 
 1. Create an `apollo.config.js` file at the root of the project.
 2. Obtain a [Personal API key](/graphos/api-keys) from GraphOS Studio.
@@ -32,8 +37,8 @@ For the VS Code plugin to know how to find the schema, it needs to be linked to 
 ```js
 module.exports = {
   client: {
-    service: "my-graphql-app",
-  },
+    service: 'my-graphql-app'
+  }
 };
 ```
 
@@ -41,7 +46,7 @@ The `service` name here is the name of the graph you've created in [GraphOS Stud
 
 ### Setting up the `.env` file
 
-To authenticate with GraphOS Studio to pull down your schema, create a `.env` file in the same directory as the `apollo.config.js` file. This should be an **untracked** file (i.e., don't commit it to Git).
+To authenticate with GraphOS Studio to pull down your schema, create a `.env` file in the same directory as the `apollo.config.js` file. This should be an **untracked** file (that is, don't commit it to Git).
 
 Then go to your [User Settings page](https://studio.apollographql.com/user-settings/api-keys?referrer=docs-content) in GraphOS Studio to create a new Personal API key.
 
@@ -67,10 +72,10 @@ Sometimes it may make sense to link the editor to a locally running version of a
 module.exports = {
   client: {
     service: {
-      name: "my-graphql-app",
-      url: "http://localhost:4000/graphql",
-    },
-  },
+      name: 'my-graphql-app',
+      url: 'http://localhost:4000/graphql'
+    }
+  }
 };
 ```
 
@@ -85,10 +90,10 @@ Client side schema definitions can be spread throughout the client app project a
 ```js
 module.exports = {
   client: {
-    service: "my-graphql-app",
-    includes: ["./src/**/*.js"],
-    excludes: ["**/__tests__/**"],
-  },
+    service: 'my-graphql-app',
+    includes: ['./src/**/*.js'],
+    excludes: ['**/__tests__/**']
+  }
 };
 ```
 
@@ -113,7 +118,12 @@ Apollo for VS Code brings many helpful features for working on a GraphQL project
 
 Once configured, editors have full knowledge of the schema clients are running operations against, including client-only schemas (for things like local state mutations). Because of this, editors have the ability to autocomplete fields and arguments as you type.
 
-<img src="../img/editors/autocomplete.gif" width="80%" style="margin: 5%" alt="vscode completing a field when typing" />
+<img
+  src="../img/editors/autocomplete.gif"
+  width="80%"
+  style="margin: 5%"
+  alt="vscode completing a field when typing"
+/>
 
 ### Inline errors and warnings
 
@@ -158,7 +168,12 @@ Apollo's editor extension provides syntax highlighting for all things GraphQL, i
 
 Navigating large codebases can be difficult, but the Apollo GraphQL extension makes this easier. Right-clicking on any field in operations or schemas gives you the ability to jump to (or peek at) definitions, as well as find any other references to that field in your project.
 
-<img src="../img/editors/jump-to-def.gif" width="80%" style="margin: 5%" alt="Using jump to definition on a fragment" />
+<img
+  src="../img/editors/jump-to-def.gif"
+  width="80%"
+  style="margin: 5%"
+  alt="Using jump to definition on a fragment"
+/>
 
 ### Graph variant switching
 
