--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -8,11 +8,11 @@ This article describes GraphOS Studio features for all [graph types](./#graph-ty
 
 **To create a cloud supergraph,** see the [GraphOS quickstart](../quickstart/cloud/).
 
-**To create a _non_-cloud graph** (i.e., a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
+**To create a _non_-cloud graph** (that is, a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
 
 ## Viewing graph details
 
-After selecting an organization in GraphOS Studio, click on a particular graph variant to view its README, schema, data, and settings. All of a Studio organization's members can access the data and settings for every graph that belongs to that organization.
+After selecting an organization in GraphOS Studio, click a particular graph variant to view its README, schema, data, and settings. All of a Studio organization's members can access the data and settings for every graph that belongs to that organization.
 
 <Tip>
 
@@ -230,7 +230,7 @@ This filter includes all fields that return a particular type, regardless of eac
 </td>
 <td>
 
-Include results that take a GraphQL argument with any of the the specified names. If viewing a table of objects, include objects with at least one _field_ that takes a specified argument.
+Include results that take a GraphQL argument with any of the specified names. If viewing a table of objects, include objects with at least one _field_ that takes a specified argument.
 
 </td>
 <td>
@@ -340,7 +340,7 @@ by visiting the graph's Settings page in Studio and changing the **graph owner**
 
 **Deleting a graph cannot be undone!**
 
-If you delete a cloud supergraph, all of its GraphOS-hosted routers are **deprovisioned**.
+If you delete a cloud supergraph, all its GraphOS-hosted routers are **deprovisioned**.
 
 </Caution>
 
