--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -430,7 +430,7 @@ Go to your variant's **Insights** page, which looks like this:
   alt="The Insights page in GraphOS Studio, showing metrics for operations and their fields"
 />
 
-The operations you [executed in the Explorer](#4-query-your-supergraph) should already be represented on this page. After you update all of your clients to query your router, the Insights page becomes vital to monitoring your supergraph's performance.
+The operations you [executed in the Explorer](#4-query-your-supergraph) should already be represented on this page. After you update all your clients to query your router, the Insights page becomes vital to monitoring your supergraph's performance.
 
 Learn more about the available metrics in the [metrics documentation](../metrics).
 
