--- a/src/content/graphos/basics/quickstart/next-steps.mdx
+++ b/src/content/graphos/basics/quickstart/next-steps.mdx
@@ -7,7 +7,7 @@ After you [create a supergraph](./cloud/) with GraphOS Studio, read below to lea
 
 <Note>
 
-You should always start by  [installing the Rover CLI](#first-install-the-rover-cli). Otherwise, you can perform the steps described on this page in any order.
+You should always start by [installing the Rover CLI](#first-install-the-rover-cli). Otherwise, you can perform the steps described on this page in any order.
 
 </Note>
 
@@ -100,7 +100,7 @@ To take full advantage of federation features, each of your subgraphs needs to u
 1. To check whether your current GraphQL server library supports the subgraph specification, see [this article](/federation/building-supergraphs/supported-subgraphs).
    - If your library _does_ support the spec, consult its documentation to learn how to enable its federation support. For Apollo Server, see [this article](/apollo-server/using-federation/apollo-subgraph-setup).
    - If your library _doesn't_ support the spec, consult the library list to find an alternative in your preferred programming language.
-2. Enable federation support for all of your subgraphs and deploy the updated subgraphs to your environment.
+2. Enable federation support for all your subgraphs and deploy the updated subgraphs to your environment.
 
 After you make these changes, you can start using powerful federation features in your subgraphs, including:
 
@@ -150,7 +150,7 @@ For more information, see [Securing your subgraphs](/federation/building-supergr
 
 ### Configure notifications
 
-GraphOS can send you various types of notifications via a few different channels (including Slack and Pagerduty). These notifications can include a daily metrics report, schema change updates, and experimental performance alerts. [Set up notifications.](../metrics/notifications/notification-setup/)
+GraphOS can send you various types of notifications via a few different channels (including Slack and PagerDuty). These notifications can include a daily metrics report, schema change updates, and experimental performance alerts. [Set up notifications.](../metrics/notifications/notification-setup/)
 
 ### Invite team members
 
@@ -162,7 +162,12 @@ If you've created a Studio organization to collaborate with your team, invite yo
 
 A supergraph variant's **Clients** page enables you to view operation metrics, segmented by your different clients:
 
-<img src="../../img/client-awareness/overview.jpg" className="screenshot" alt="Client awareness overview" width="400" />
+<img
+  src="../../img/client-awareness/overview.jpg"
+  className="screenshot"
+  alt="Client awareness overview"
+  width="400"
+/>
 
 To get the most out of this feature, each of your client applications should set values for the following HTTP headers in each request they send to your router:
 
