--- a/src/content/graphos/explorer/subscriptions-explorer.mdx
+++ b/src/content/graphos/explorer/subscriptions-explorer.mdx
@@ -66,7 +66,7 @@ When you run the subscription, a **Subscriptions** panel appears in the bottom r
 
 ## Troubleshooting connection issues
 
-If you can't connect to your subscriptions endpoint, double-check all of the following in the Explorer's **Connection settings**:
+If you can't connect to your subscriptions endpoint, double-check all the following in the Explorer's **Connection settings**:
 
 - The protocol of your endpoint URL (`ws`/`wss` for WebSocket, `http`/`https` for HTTP)
 - The path of your endpoint URL
