--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -77,7 +77,7 @@ To integrate Apollo with Datadog, you provide your Datadog API key and region to
      width="500"
    />
 
-   You can use the same Datadog API key for all of your graphs because all forwarded metrics are tagged with the corresponding graph's ID (`graph:<graph-id>`).
+   You can use the same Datadog API key for all your graphs because all forwarded metrics are tagged with the corresponding graph's ID (`graph:<graph-id>`).
 
 That's it! After about five minutes, your Datadog Metrics Explorer will begin showing metrics forwarded from GraphOS Studio.
 
@@ -98,7 +98,7 @@ These metrics are also tagged with both the associated Apollo graph ID (as `grap
 
 <Note>
 
-If you set up your integration before October 2020, the metric names start with `apollo.engine.operations` instead of `apollo.operations`, and use a `service:<graph-id>` tag instead of `graph:<graph-id>`. This is called "legacy mode". You may transition your graph to modern mode by clicking the "Transition to modern mode" button on your graph's Integrations page. This is a one-way change; you should be prepared to update any dashboards and metrics to use the new metric and tag names when you click the button.
+If you set up your integration before October 2020, the metric names start with `apollo.engine.operations` instead of `apollo.operations`, and use a `service:<graph-id>` tag instead of `graph:<graph-id>`. This is called "legacy mode." You may transition your graph to modern mode by clicking the "Transition to modern mode" button on your graph's Integrations page. This is a one-way change; you should be prepared to update any dashboards and metrics to use the new metric and tag names when you click the button.
 
 </Note>
 
