--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -19,7 +19,7 @@ GraphOS can send your team the following notification types:
 
 Currently, GraphOS can send each of these notification types to the channel(s) indicated:
 
-| Notification Type                            | Slack | Pagerduty | Custom Webhook |
+| Notification Type                            | Slack | PagerDuty | Custom Webhook |
 | :------------------------------------------- | :---: | :-------: | :------------: |
 | Daily reports                                |   ✓   |           |                |
 | Schema change notifications                  |   ✓   |           |       ✓        |
@@ -60,14 +60,14 @@ For performance alerts, see [Performance alerts setup](./performance-alerts/#set
    />
 7. Click **Next**.
 8. If you're configuring a new channel, complete the steps in [Configuring a new channel](#configuring-a-new-channel).
-9. If you're creating a daily report, select a time zone. The report is sent daily at 9am in the selected time zone.
+9. If you're creating a daily report, select a time zone. The report is sent daily at 9 AM in the selected time zone.
 
 ## Configuring a new channel
 
 You create new channels as part of the [notification creation process](#creating-a-notification). The information you provide to Studio depends on the type of channel:
 
 - [Slack](#slack)
-- [Pagerduty](#pagerduty)
+- [PagerDuty](#pagerduty)
 - [Custom webhooks (enterprise only)](#custom-webhooks-enterprise-only)
 
 After you configure a channel for your organization, you can use it to send any notification type that the channel supports. You can add any number of notification channels to your organization.
@@ -105,24 +105,24 @@ You can repeat this process to create webhook URLs for different Slack channels.
 
 To configure multiple Slack channels, repeat this process with a different corresponding webhook URL each time.
 
-### Pagerduty
+### PagerDuty
 
-#### 1. Create a Pagerduty integration key
+#### 1. Create a PagerDuty integration key
 
-Generate an [integration key](https://support.pagerduty.com/docs/generating-api-keys#events-api-keys) for the service that should recieve alerts in Pagerduty. You can select an [existing service](#existing-services) that corresponds to your GraphQL API or [**Add New Service**](#adding-a-service).
+Generate an [integration key](https://support.pagerduty.com/docs/generating-api-keys#events-api-keys) for the service that should receive alerts in PagerDuty. You can select an [existing service](#existing-services) that corresponds to your GraphQL API or [**Add New Service**](#adding-a-service).
 
 ##### Existing services
 
 1. Navigate to the service's Integrations tab and click **new integration**.
-2. Enter an Integration Name, (e.g. "Apollo Alerts").
-3. Under "Integration type", choose **Use our API directly** and **Events API v2**.
+2. Enter an Integration Name, (for example "Apollo Alerts").
+3. Under "Integration type," choose **Use our API directly** and **Events API v2**.
 4. Click **Add Integration**.
 5. From the Integrations tab, copy the generated integration key from the table for use in the [next step](#2-provide-the-integration-key-to-studio).
 
 ##### Adding a service
 
-1. Under "Integration Settings", choose **Use our API directly** and use **Events API v2**.
-2. Enter an Integration Name (e.g., `Apollo Alerts`) and complete the add service flow.
+1. Under "Integration Settings," choose **Use our API directly** and use **Events API v2**.
+2. Enter an Integration Name (for example, `Apollo Alerts`) and complete the add service flow.
 3. From the Integrations tab, copy the generated integration key from the table for use in the [next step](#2-provide-the-integration-key-to-studio).
 
 #### 2. Provide the integration key to Studio
@@ -136,13 +136,13 @@ Generate an [integration key](https://support.pagerduty.com/docs/generating-api-
 
 1. Back in Studio, specify a name for this notification channel in the Channel Name field. This name must be unique among your graph's notification channels.
 
-   _This name does not have to match the name of the Pagerduty service, but it's recommended for simplicity._
+   _This name does not have to match the name of the PagerDuty service, but it's recommended for simplicity._
 
-2. In the Pagerduty Integration Key field, paste the integration key you obtained in [Create a pagerduty integration key](#1-create-a-pagerduty-integration-key).
+2. In the PagerDuty Integration Key field, paste the integration key you obtained in [Create a PagerDuty integration key](#1-create-a-pagerduty-integration-key).
 
 3. Click **Done**.
 
-### Custom webhooks (enterprise only)
+### Custom webhooks
 
 <EnterpriseFeature />
 
