--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -12,9 +12,9 @@ Each organization member has one of the following roles:
 | ------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
 | **Org Admin**       | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                           |                              All                               |
 | **Graph Admin**     | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                                   |                        Enterprise only                         |
-| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for back-end developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](../graphs/studio-features/#protected-variants-enterprise-only).                                      |                        Enterprise only                         |
+| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for backend developers who are authorized to make changes to graphs. _Cannot_ push schema changes to [protected variants](../graphs/studio-features/#protected-variants-enterprise-only).                                       |                        Enterprise only                         |
 | **Documenter**      | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                         |                        Enterprise only                         |
-| **Observer**        | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for back-end developers who are _not_ authorized to make changes to graphs.                                                                                                            |                        Enterprise only                         |
+| **Observer**        | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for backend developers who are _not_ authorized to make changes to graphs.                                                                                                             |                        Enterprise only                         |
 | **Consumer**        | <p>Has view-only access to the organization's graph _schemas_, but not metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.</p><p>This role is available to all plan types. For legacy Team plans, **Consumer** members do not count as billed users.</p> |                              All                               |
 | **Billing Manager** | <p>Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers)</p><p>This role is available to all paid plan types. For legacy Team plans, **Billing Manager** members do not count as billed users.</p>       |                      All paid plan types                       |
 
@@ -121,7 +121,7 @@ Before January 2021, graph keys did not have roles. Keys created before that dat
 <Note>
 
 - If your organization uses an identity provider (IdP) for single sign-on (SSO), you should configure access in your IdP rather than via invitations. For example, with Okta, you need to [assign](./sso/okta-integration-guide#assign-users-in-okta) members to your GraphOS Studio integration to give them access. If you've configured a member to have access in your IdP, they can access GraphOS Studio without an invitation link.
-- **Do not share invite links publicly.** Anyone with the link can join your organization. If an invite link becomes compromised, an admin can replace or disable it from the Settings tab.
+- **Do not share invite links publicly.** Anyone with the link can join your organization. If an invite link becomes compromised, an admin can replace or turn it off from the Settings tab.
 
 </Note>
 
