--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -13,7 +13,11 @@ Every Apollo organization has an associated plan that determines which GraphOS f
 
 You can check your organization's current plan in GraphOS Studio. From your organization's page, go to the **Settings** tab and scroll down to the **Plan and Billing** section:
 
-<img className="screenshot" alt="The Plan and Billing section in GraphOS Studio" src="../img/plan-and-billing.jpg" />
+<img
+  className="screenshot"
+  alt="The Plan and Billing section in GraphOS Studio"
+  src="../img/plan-and-billing.jpg"
+/>
 
 ## Current plans
 
@@ -27,7 +31,7 @@ Apollo offers the following plans to new organizations:
 
 | Plan                             | Description                                                                                                                                                                                                                                                                                                                       |
 | -------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Serverless (Free)**            | Provides access to serverless [cloud supergraphs](../graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly serverless operations. This plan is free.                                                                                                                                  |
+| **Serverless (Free)**            | Provides access to Serverless [cloud supergraphs](../graphs/#cloud-supergraphs), along with many other GraphOS features. Sets a fixed limit on monthly Serverless operations. This plan is free.                                                                                                                                  |
 | **Serverless**                   | Removes the operation limit of the **Serverless (Free)** plan, and is billed based on usage _above_ that limit. Also expands metrics data retention.                                                                                                                                                                              |
 | **Dedicated <br/> (In preview)** | This plan lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It is currently in invite-only preview. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> if you'd like to request access or have any questions. |
 | **Enterprise**                   | The Enterprise plan features self-hosted routing, advanced security and schema delivery features, access control, and more. It does _not_ support cloud supergraphs. It includes negotiable usage rates. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials).                        |
@@ -68,7 +72,7 @@ You can identify your trial organization in [GraphOS Studio](https://studio.apol
 
 <img
   className="screenshot"
-  alt="Label applied to Enterprise orgs in Studio"
+  alt="Label applied to Enterprise organizations in Studio"
   src="../img/trial-org-label.jpg"
   width="500"
 />
@@ -94,7 +98,7 @@ You can't access a locked organization from GraphOS Studio, and GraphOS stops se
 
 ## Legacy plans
 
-If you have a non-Enterprise Apollo organization that was created before **4 October 2022**, it's on one of the following legacy plans.
+If you have a non-Enterprise Apollo organization that was created before **October 4, 2022**, it's on one of the following legacy plans.
 
 <Note>
 
@@ -104,10 +108,10 @@ If your organization is on one of these plans, we strongly recommend [upgrading 
 
 </Note>
 
-| Plan     | Description                                                                                                                                                                                                          |
-| -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Free** | Our legacy free plan, different from the current **Serverless (Free)** plan. Provides basic GraphOS features, with _very_ limited data retention and maximum query volume.                                           |
-| **Team** | Our legacy plan for small and medium teams, which is billed based on the number of team members (i.e., seat-based). Raises the retention and query volume limits from the **Free** plan, but does not _remove_ them. |
+| Plan     | Description                                                                                                                                                                                                             |
+| -------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Free** | Our legacy Free plan, different from the current **Serverless (Free)** plan. Provides basic GraphOS features, with limited data retention and maximum query volume.                                                     |
+| **Team** | Our legacy plan for small and medium teams, which is billed based on the number of team members (that is, seat-based). Raises the retention and query volume limits from the **Free** plan, but does not _remove_ them. |
 
 ### Upgrading to a current plan
 
