--- a/src/content/technotes/TN0013-monolith-to-federation.mdx
+++ b/src/content/technotes/TN0013-monolith-to-federation.mdx
@@ -177,7 +177,7 @@ When you're deciding how to start migrating types to other subgraphs, it's helpf
 
 **How many related types will you have to migrate at the same time?**
 
-Count the number of value types associated with an entity. You'll need to copy all of those types over to the new subgraph when you migrate the entity. Entities with fewer related scalars, enums, and non-entity object types will be a bit easier to migrate.
+Count the number of value types associated with an entity. You'll need to copy all those types over to the new subgraph when you migrate the entity. Entities with fewer related scalars, enums, and non-entity object types will be a bit easier to migrate.
 
 You won't need to move related entities at the same time as long as you can return an [entity reference](/federation/entities/#referencing-an-entity-without-contributing-fields). For example, you can move the `Room` type if you have access to the `Hotel` foreign key:
 
