--- a/src/content/technotes/TN0035-load-testing-graphql.mdx
+++ b/src/content/technotes/TN0035-load-testing-graphql.mdx
@@ -29,13 +29,13 @@ Both approaches have benefits and tradeoffs. Testing services in isolation allow
 
 A load test is only as valuable as the information obtained after running it. Having the proper observability setup is crucial for a successful load test. When load testing a GraphQL API, you want metrics that are GraphQL-aware and provide insight into the runtime and execution behavior of production operations. [Apollo GraphOS' metrics engine](/graphos/metrics/) provides this deep insight into operations by allowing you to see things like slow operations and [field-level performance metrics](/graphos/metrics/operations/#resolver-level-traces) on every operation.
 
-Gathering trace data can have a noticable impact on performance, so consider running tests with tracing disabled to measure peak load. Enabling traces during loads tests will help illuminate which parts of your graph are slow and what resolvers could be optimized. Our docs on [tracing performance considerations](/graphos/metrics/field-usage#performance-considerations) go into more detail about how to modify tracing behavior. The Router can emits metrics for [time spent processing a request](/router/configuration/telemetry/instrumentation/standard-instruments/#performance), outside of waiting for external or subgraph requests. Combined, both the Router and tracing metrics provide plenty of detail to diagnose performance issues after a load test.
+Gathering trace data can have a noticable impact on performance, so consider running tests with tracing turned off to measure peak load. Enabling traces during loads tests will help illuminate which parts of your graph are slow and what resolvers could be optimized. Our docs on [tracing performance considerations](/graphos/metrics/field-usage#performance-considerations) go into more detail about how to modify tracing behavior. The Router can emits metrics for [time spent processing a request](/router/configuration/telemetry/instrumentation/standard-instruments/#performance), outside of waiting for external or subgraph requests. Combined, both the Router and tracing metrics provide plenty of detail to diagnose performance issues after a load test.
 
 Apollo offers first-class support for sending metrics outside GraphOS Studio to any system that supports the [Open Telemetry](/federation/opentelemetry/) protocol (OTLP) as well as a built-in Datadog integration for enterprise customers.
 
 ## Don't Pollute Production Metrics
 
-When load testing a graph in production, exclude load test metrics from live production metrics. For metrics sent to GraphOS, consider sending load test traffic to a dedicated schema variant, i.e. `My-Graph@load-variant`. This will allow you to cleanly separate production metrics from load tests.
+When load testing a graph in production, exclude load test metrics from live production metrics. For metrics sent to GraphOS, consider sending load test traffic to a dedicated schema variant, that is `My-Graph@load-variant`. This will allow you to cleanly separate production metrics from load tests.
 
 <Tip>
 
@@ -53,6 +53,6 @@ Performance bottlenecks will likley be at the application level (resolvers and b
 
 ### Operation Cardinality
 
-When a GraphQL API encounters a new operation, the operation must be parsed into the proper format, validated against the existing schema, and then finally executed. The Router goes through the additional step of [query planning](/federation/query-plans/) as well. These steps can account for some noticeable runtime overhead and latency if the volume of unique operations is high enough. All of these steps must happen for the initial request of every unique operation against your graph.
+When a GraphQL API encounters a new operation, the operation must be parsed into the proper format, validated against the existing schema, and then finally executed. The Router goes through the additional step of [query planning](/federation/query-plans/) as well. These steps can account for some noticeable runtime overhead and latency if the volume of unique operations is high enough. All these steps must happen for the initial request of every unique operation against your graph.
 
 Most of these steps are highly cacheable. Apollo has several built-in features that take advantage of this, such as [Automatic Persisted Queries (APQs)](/apollo-server/performance/apq/). APQ's are on by default in Apollo Server/Gateway and the Apollo Router, and just a simple configuration setting in Apollo Client to enable them. A graph which processes a high cardinality of operations that are only executed once, can't take advantage of most of these features. This isn't a big concern in most real world applications as operations are normally executed more than once.
