--- a/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
+++ b/src/content/technotes/TN0046-managing-graph-environments-using-variants.mdx
@@ -301,7 +301,7 @@ flowchart TB
 
 Using [`rover subgraph check`](/rover/commands/subgraphs/#validating-subgraph-schema-changes) to run checks when opening a merge request is a great tool for ensuring that changes won't cause problems with the composition of your supergraph. Setting this up requires a CI/CD job to run against pull request events and execute the rover command on the updated schema.
 
-Here is an example using Github Actions:
+Here is an example using GitHub Actions:
 
 ```yml
 name: Pull Request Check Code
